--- a/index.html
+++ b/index.html
@@ -77,47 +77,83 @@
             document.getElementById(tabId).classList.remove('hidden');
         }
 
+        // Initialize the Google Sheets API client
+        function initClient() {
+            gapi.client.init({
+                apiKey: 'AIzaSyDcQhBAfb_kTc8UMu2LacI2HB1rbT3AuJQ',
+                discoveryDocs: ["https://sheets.googleapis.com/$discovery/rest?version=v4"],
+            }).then(function() {
+                loadSheetData();
+            }, function(error) {
+                console.error('Error initializing GAPI client', error);
+            });
+        }
+
         // Function to load data from Google Sheets
-        async function loadSheetData() {
-            try {
-                // Replace with your actual Google Sheets API call
-                const response = await fetch('YOUR_GOOGLE_SHEETS_API_ENDPOINT');
-                const data = await response.json();
-                return data.values;
-            } catch (error) {
-                console.error('Error loading sheet data:', error);
-                return [];
-            }
+        function loadSheetData() {
+            gapi.client.sheets.spreadsheets.values.get({
+                spreadsheetId: '1532071504',
+                range: 'Copy of Raw Tracking!A2:G50',
+            }).then(function(response) {
+                const data = response.result.values;
+                if (data && data.length > 0) {
+                    createChart(data);
+                    populateDataTable(data);
+                } else {
+                    console.log('No data found.');
+                }
+            }, function(response) {
+                console.error('Error: ' + response.result.error.message);
+            });
         }
 
         // Function to create a chart
         function createChart(data) {
-            const ctx = document.createElement('canvas');
-            document.getElementById('chart-container').innerHTML = '';
-            document.getElementById('chart-container').appendChild(ctx);
+            const ctx = document.getElementById('myChart').getContext('2d');
+            const labels = data.map(row => row[0]); // Assuming first column is labels
+            const datasets = [1, 2, 3, 4, 5, 6].map(index => ({
+                label: `Column ${index + 1}`,
+                data: data.map(row => parseFloat(row[index]) || 0),
+                backgroundColor: `rgba(${Math.random() * 255},${Math.random() * 255},${Math.random() * 255},0.6)`,
+            }));
 
             new Chart(ctx, {
                 type: 'bar',
                 data: {
-                    labels: data.map(row => row[0]),
-                    datasets: [{
-                        label: 'Sample Data',
-                        data: data.map(row => row[1]),
-                        backgroundColor: 'rgba(75, 192, 192, 0.6)',
-                    }]
+                    labels: labels,
+                    datasets: datasets
                 },
                 options: {
                     responsive: true,
                     maintainAspectRatio: false,
+                    scales: {
+                        y: {
+                            beginAtZero: true
+                        }
+                    }
                 }
             });
         }
 
         // Function to populate the data table
         function populateDataTable(data) {
+            const tableHeader = document.getElementById('table-header');
             const tableBody = document.getElementById('data-body');
+            
+            // Clear existing content
+            tableHeader.innerHTML = '';
             tableBody.innerHTML = '';
-            data.forEach(row => {
+
+            // Add headers
+            data[0].forEach(header => {
+                const th = document.createElement('th');
+                th.textContent = header;
+                th.className = 'py-2 px-4 border-b';
+                tableHeader.appendChild(th);
+            });
+
+            // Add data rows
+            data.slice(1).forEach(row => {
                 const tr = document.createElement('tr');
                 row.forEach(cell => {
                     const td = document.createElement('td');
@@ -129,15 +165,8 @@
             });
         }
 
-        // Initialize the page
-        async function init() {
-            const data = await loadSheetData();
-            createChart(data);
-            populateDataTable(data);
-        }
-
-        // Call init when the page loads
-        window.onload = init;
+        // Load the GAPI client
+        gapi.load('client', initClient);
     </script>
 </body>
 </html>
